--- a/.gitmodules
+++ b/.gitmodules
@@ -64,6 +64,9 @@
 [submodule "src/python-oauth2"]
 	path = src/python-oauth2
 	url = git://github.com/simplegeo/python-oauth2.git
+[submodule "src/redis"]
+    path = src/redis
+    url = git://github.com/jbalogh/redis-py
 [submodule "src/schematic"]
 	path = src/schematic
 	url = git://github.com/jbalogh/schematic.git
