waffle my heart

--- a/.gitmodules
+++ b/.gitmodules
@@ -103,3 +103,6 @@
 [submodule "src/django-quieter-formset"]
 	path = src/django-quieter-formset
 	url = git://github.com/andymckay/django-quieter-formset.git
+[submodule "src/django-waffle"]
+	path = src/django-waffle
+	url = https://github.com/jsocol/django-waffle.git
