--- a/.gitmodules
+++ b/.gitmodules
@@ -17,8 +17,11 @@
 	path = src/django
 	url = git://github.com/django/django
 [submodule "src/django-cache-machine"]
-	path = src/django-cache-machine
-	url = git://github.com/jbalogh/django-cache-machine.git
+    path = src/django-cache-machine
+    url = git://github.com/jbalogh/django-cache-machine.git
+[submodule "src/django-cronjobs"]
+	path = src/django-cronjobs
+	url = git://github.com/jsocol/django-cronjobs.git
 [submodule "src/django-csp"]
 	path = src/django-csp
 	url = git://github.com/mozilla/django-csp.git
