--- a/.gitmodules
+++ b/.gitmodules
@@ -151,3 +151,6 @@
 [submodule "src/addon-sdk-docs-1.2.1"]
 	path = src/addon-sdk-docs-1.2.1
 	url = git://github.com/mozilla/addon-sdk-sdocs.git
+[submodule "src/addon-sdk-docs-1.3"]
+	path = src/addon-sdk-docs-1.3
+	url = git://github.com/mozilla/addon-sdk-sdocs.git
