--- a/.gitmodules
+++ b/.gitmodules
@@ -160,3 +160,6 @@
 [submodule "src/django-statsd"]
 	path = src/django-statsd
 	url = git://github.com/andymckay/django-statsd.git
+[submodule "src/addon-sdk-docs-1.4"]
+	path = src/addon-sdk-docs-1.4
+	url = git://github.com/mozilla/addon-sdk-sdocs.git
