--- a/.gitmodules
+++ b/.gitmodules
@@ -166,3 +166,6 @@
 [submodule "src/addon-sdk-docs-1.5"]
 	path = src/addon-sdk-docs-1.5
 	url = git://github.com/mozilla/addon-sdk-sdocs.git
+[submodule "src/addon-sdk-docs-1.6"]
+	path = src/addon-sdk-docs-1.6
+	url = git://github.com/mozilla/addon-sdk-sdocs.git
