--- a/.gitmodules
+++ b/.gitmodules
@@ -178,3 +178,6 @@
 [submodule "src/addon-sdk-docs-1.7"]
 	path = src/addon-sdk-docs-1.7
 	url = git://github.com/mozilla/addon-sdk-sdocs.git
+[submodule "src/django-tastypie"]
+	path = src/django-tastypie
+	url = https://github.com/toastdriven/django-tastypie
