add sdk docs 1.9; bug 779199

--- a/.gitmodules
+++ b/.gitmodules
@@ -193,3 +193,6 @@
 [submodule "src/moz_inapp_pay"]
 	path = src/moz_inapp_pay
 	url = git://github.com/kumar303/moz_inapp_pay.git
+[submodule "src/addon-sdk-docs-1.9"]
+	path = src/addon-sdk-docs-1.9
+	url = git://github.com/mozilla/addon-sdk-sdocs.git
