--- a/.gitmodules
+++ b/.gitmodules
@@ -196,3 +196,6 @@
 [submodule "src/addon-sdk-docs-1.9"]
 	path = src/addon-sdk-docs-1.9
 	url = git://github.com/mozilla/addon-sdk-sdocs.git
+[submodule "src/app-validator"]
+	path = src/app-validator
+	url = git://github.com/mozilla/app-validator.git
