--- a/.gitmodules
+++ b/.gitmodules
@@ -211,3 +211,6 @@
 [submodule "src/PyMySQL"]
 	path = src/PyMySQL
 	url = https://github.com/petehunt/PyMySQL
+[submodule "src/addon-sdk-docs-1.10"]
+	path = src/addon-sdk-docs-1.10
+	url = git://github.com/mozilla/addon-sdk-sdocs.git
