--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule "src/addon-sdk-docs-1.10"]
 	path = src/addon-sdk-docs-1.10
 	url = git://github.com/mozilla/addon-sdk-sdocs.git
+[submodule "src/schematic"]
+	path = src/schematic
+	url = git://github.com/jbalogh/schematic.git
