--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "js/receiptverifier"]
         path = js/receiptverifier
-        url = git://github.com/mozilla/receiptverifier.git
+        url = https://github.com/mozilla/receiptverifier.git
